@@ -938,22 +938,6 @@ int main(int argc, char **argv) {
     bstring bt = bfromcstr("");
     int ok = options_save(_options.binconfig, bt);
     if (!ok) log_err(0, "could not save configuration options!");
-    else {
-      if (_options.uid) {
-	if (chown(_options.binconfig, _options.uid, _options.gid)) {
-	  log_err(errno, "could not chown() %s",
-		  _options.binconfig);
-	} else {
-	  char file[512], *dpath;
-	  snprintf(file, sizeof(file), "%s", _options.binconfig);
-	  if ((dpath = dirname(file))) {
-	    if (chown(dpath, _options.uid, _options.gid)) {
-	      log_warn(errno, "could not chown() %s", dpath);
-	    }
-	  }
-	}
-      }
-    }
     bdestroy(bt);
   }
 
