@@ -59,7 +59,7 @@ int tun_set_cb_ind(struct tun_t *this, int (*cb_ind) (struct tun_t *tun, void *p
 
 int tun_setaddr(struct tun_t *this, struct in_addr *addr, struct in_addr *dstaddr, struct in_addr *netmask);
 
-int tun_runscript(struct tun_t *tun, char* script);
+int tun_runscript(struct tun_t *tun, char* script, int wait);
 
 net_interface *tun_nextif(struct tun_t *tun);
 int tun_name2idx(struct tun_t *tun, char *name);
