@@ -2,26 +2,26 @@ coova-chilli (1.2.3-rc1) unstable; urgency=low
 
    * See ChangeLog
 
- -- Coova <support@coova.com>  Fri, 1 Jan 2010 00:00:00 +0200
+ -- Coova Technologies, LLC <support@coova.com>  Fri, 1 Jan 2010 00:00:00 +0200
 
 coova-chilli (1.2.2) unstable; urgency=low
 
    * See ChangeLog
 
- -- Coova <support@coova.com>  Fri, 1 Jan 2010 00:00:00 +0200
+ -- Coova Technologies, LLC <support@coova.com>  Fri, 1 Jan 2010 00:00:00 +0200
  
 coova-chilli (1.2.1) unstable; urgency=low
 
    * See ChangeLog
 
- -- Coova <support@coova.com>  Fri, 1 Jan 2010 00:00:00 +0200
+ -- Coova Technologies, LLC <support@coova.com>  Fri, 1 Jan 2010 00:00:00 +0200
  
 coova-chilli (1.2.0) unstable; urgency=low
 
    * See ChangeLog
    * Use debhelper compat level 7.
 
- -- Coova <support@coova.com>  Fri, 1 Jan 2010 00:00:00 +0200
+ -- Coova Technologies, LLC <support@coova.com>  Fri, 1 Jan 2010 00:00:00 +0200
  
 coova-chilli (1.0.12-2) unstable; urgency=low
 
